--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>this is my first upload to github </h1>
     <p>im using the terminal to upload through git commands for my Coding Dojo assignment. lets see how it turns out.</p>
+    <p class="green">Ive succesfully pushed my code to github</p>
     
 </body>
 </html>
